[gd_scene load_steps=3 format=2]

[ext_resource path="res://Debug/DebugWindow/DebugControlWindow.tscn" type="PackedScene" id=1]
[ext_resource path="res://Script/Debug/DebugScriptController.gd" type="Script" id=2]

[node name="DebugScriptController" type="Control"]
script = ExtResource( 2 )

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 21.0
margin_top = 41.0
margin_right = 361.0
margin_bottom = 269.0
popup_exclusive = true
window_title = "Open a File"
mode = 0
filters = PoolStringArray( "*.tres" )

[node name="DebugScriptWindow" parent="." instance=ExtResource( 1 )]
margin_left = -1.0
margin_right = 267.0
margin_bottom = 202.0

[node name="VBoxContainer" type="VBoxContainer" parent="DebugScriptWindow"]
margin_left = 5.0
margin_top = 20.0
margin_right = 40.0
margin_bottom = 40.0

[node name="FileHBoxContainer" type="HBoxContainer" parent="DebugScriptWindow/VBoxContainer"]
margin_right = 137.0
margin_bottom = 14.0

[node name="FileLabel" type="Label" parent="DebugScriptWindow/VBoxContainer/FileHBoxContainer"]
margin_right = 27.0
margin_bottom = 14.0
text = "File:"

[node name="FileUsed" type="Label" parent="DebugScriptWindow/VBoxContainer/FileHBoxContainer"]
margin_left = 31.0
margin_right = 117.0
margin_bottom = 14.0
text = "[WWWWWW]"

[node name="StatusHBoxContainer" type="HBoxContainer" parent="DebugScriptWindow/VBoxContainer"]
margin_top = 18.0
margin_right = 137.0
margin_bottom = 32.0

[node name="StatusLabel" type="Label" parent="DebugScriptWindow/VBoxContainer/StatusHBoxContainer"]
margin_right = 47.0
margin_bottom = 14.0
text = "Status: "

[node name="Status" type="Label" parent="DebugScriptWindow/VBoxContainer/StatusHBoxContainer"]
margin_left = 51.0
margin_right = 137.0
margin_bottom = 14.0
text = "[WWWWWW]"

[node name="FileButtonHBoxContainer" type="HBoxContainer" parent="DebugScriptWindow/VBoxContainer"]
margin_top = 36.0
margin_right = 137.0
margin_bottom = 50.0

[node name="OpenFileDialog" type="Button" parent="DebugScriptWindow/VBoxContainer/FileButtonHBoxContainer"]
margin_right = 62.0
margin_bottom = 14.0
text = "Open File"

[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="DebugScriptWindow/VBoxContainer/FileButtonHBoxContainer/OpenFileDialog" to="." method="_on_OpenFileDialog_pressed"]
